# home

./: .gitignore  README.md  codebase_analysis.txt  home.cabal  keymap_config.yaml  keymap_table.txt
.github/workflows/: update-readme.yml
analysis/: Main.hs
app/: Main.hs
c_lib/: Makefile  key_listener.c  key_listener.h
patterns/: Main.hs
src/: Keymap.hs  MacEvents.hs
tui/: Main.hs
